--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@animatereactnative/marquee": "^0.5.2",
+    "@expo/metro-runtime": "~4.0.1",
     "expo": "~52.0.33",
+    "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7",
     "react-dom": "18.3.1",
-    "react-native-web": "~0.19.13",
-    "@expo/metro-runtime": "~4.0.1"
+    "react-native": "0.76.7",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-marquee": "^0.5.0",
+    "react-native-paper": "^5.13.1",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
